account.yaml
apiVersion: v1
kind: Service
metadata:
  name: saving-account
  labels:
    app: saving-account
spec:
  ports:
  - name: http-account
    port: 8082
    targetPort: 8082
    nodePort: 30002
    # protocol: TCP
  - name: grpc-account
    port: 58082
    targetPort: 58082
    nodePort: 32102
  #   protocol: TCP
  type: LoadBalancer
  selector:
    app: saving-account
---
# this file for deployment account
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: saving-account
  labels:
    app: saving-account
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: saving-account
        version: v1
    spec:
      containers:
      - name: account
        image: tnindo/account:v1pocServiceMesh.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 8082
        volumeMounts:
        - mountPath: /go/src/account/logs
          name: account-logs
      restartPolicy: Always
      volumes:
      - name: account-logs
        hostPath:
          path: /home/zainul/poc-service-mesh/data-log/saving_account/logs 
      imagePullSecrets:
      - name: regsecret
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
