transaction.yaml
apiVersion: v1
kind: Service
metadata:
  name: saving-txn
  labels:
    app: saving-txn
spec:
  ports:
  - name: http-txn
    port: 8084
    targetPort: 8084
    nodePort: 30004
    # protocol: TCP
  - name: grpc-txn
    port: 58084
    targetPort: 58084
    nodePort: 32104
    # protocol: TCP
  type: LoadBalancer
  selector:
    app: saving-txn
---
# this file for deployment txn
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: saving-txn
  labels:
    app: saving-txn
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: saving-txn
    spec:
      containers:
      - name: txn
        image: tnindo/txn:v1pocServiceMesh.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 8084
          name: http
        - containerPort: 58084
          name: grpc
        volumeMounts:
        - mountPath: /go/src/txn/logs
          name: txn-logs
      restartPolicy: Always
      volumes:
      - name: txn-logs
        hostPath:
          path: /home/zainul/poc-service-mesh/data-log/saving_txn/logs
      imagePullSecrets:
      - name: regsecret
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
