ingress-grpc-gateway-txn.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sav-txn-grpc-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      number: 32104
      protocol: grpc
