saving-ingress.yaml
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: saving-gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /sav_account/.*
        backend:
          serviceName: saving-account
          servicePort: http-account
      - path: /sav_txn/.*
        backend:
          serviceName: saving-txn
          servicePort: http-txn
      - path: /reverse.Restful/.*
        backend:
          serviceName: saving-txn
          servicePort: grpc-txn
